--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <module>tesseract</module>
     <module>caffe</module>
     <module>cuda</module>
+    <module>pylon</module>
   </modules>
 
   <scm>
