--- a/pylon/pom.xml
+++ b/pylon/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>org.bytedeco</groupId>
     <artifactId>javacpp-presets</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <groupId>org.bytedeco.javacpp-presets</groupId>
   <artifactId>pylon</artifactId>
-  <version>4.2.2-${project.parent.version}</version>
+  <version>5.0.0-${project.parent.version}</version>
   <packaging>jar</packaging>
   <name>JavaCPP Presets for Pylon</name>
 
